--- a/src/assets/styles/reset.scss
+++ b/src/assets/styles/reset.scss
@@ -3,6 +3,11 @@
     box-sizing: border-box;
 }
 
+html,
+body {
+    height: 100%;
+}
+
 /* 设置默认字体和颜色 */
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
